--- a/home/template/index.html
+++ b/home/template/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
 <html>
-    
+    <head>
+        <title> {% block title %}Delicious Bites{% endblock %}</title>
+    </head>
+    <body>
+
+    </body>
 </html>
