--- a/home/template/index.html
+++ b/home/template/index.html
@@ -4,6 +4,29 @@
         <title> {% block title %}Delicious Bites{% endblock %}</title>
     </head>
     <body>
+        <div class="wrapper">
+            <header>
+                <h1>Delicious Bites</h1>
+                <p>Fresh Food Delivered to You</p>
+            </header>
 
+            <nav>
+                <a href="{% url 'home' %}">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href="">Login</a>
+                <a href="">Register</a>
+            </nav>
+
+            <div class="container">
+                {% block content %}
+
+                {% endblock %}
+            </div>
+        </div>
+
+        <footer>
+            <p>&copy; 2025 Delicious Bites. All rights reserved.</p>
+        </footer>
     </body>
 </html>
