--- a/home/template/index.html
+++ b/home/template/index.html
@@ -2,6 +2,18 @@
 <html>
     <head>
         <title> {% block title %}Delicious Bites{% endblock %}</title>
+        <style>
+            *, *::before, *::after {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            html, body {
+                height: 100%;
+                background: linear-gradient(to bottom, #)
+            }
+        </style>
     </head>
     <body>
         <div class="wrapper">
