--- a/home/template/index.html
+++ b/home/template/index.html
@@ -44,7 +44,46 @@
                 opacity: 0.9;
             }
 
-            
+            /* Navigation Bar*/
+            nav {
+                display:flex;
+                justify-content: center;
+                flex-wrapper: wrapper;
+                gap: 20px;
+                background-color: #ffb74d;
+                padding: 12px 20px;
+            }
+
+            nav a {
+                color: #fff;
+                background-color: #fb8c00;
+                padding: 8px 16px;
+                border-radius: 20px;
+                text-decoration: none;
+                font-weight: 500;
+                transition: all 0.3s ease;
+            }
+
+            nav a:hover {
+                background-color: #e65100;
+            }
+
+            /* Main Container */
+            .container {
+                flex: 1;
+                padding: 50px 30px;
+                text-align: center;
+                background-color: white;
+            }
+
+            /* Footer */
+            footer{
+                background-color: black;
+                color: white;
+                text-align: center;
+                padding: 20px;
+                font-size: 0.9rem;
+            }
         </style>
     </head>
     <body>
