--- a/home/template/index.html
+++ b/home/template/index.html
@@ -48,7 +48,7 @@
             nav {
                 display:flex;
                 justify-content: center;
-                flex-wrapper: wrapper;
+                flex-wrap: wrap;
                 gap: 20px;
                 background-color: #ffb74d;
                 padding: 12px 20px;
