--- a/home/template/home.html
+++ b/home/template/home.html
@@ -16,7 +16,7 @@
             margin-bottom: 15px;
             color: #e65100;
         ">
-        Welcome to Delicious Bites!
+        Welcome to {{restaurent_name}}!
         </h2>
 
         <p style="
