--- a/products/template/items_list.html
+++ b/products/template/items_list.html
@@ -5,6 +5,14 @@
     </head>
     <body>
         <h1>List of Items/h1>
+            <table>
+                <th>Id</th>
+                <th>Item Name</th>
+                <th>Item Price</th>
+                <
             {% for i in items %}
+
+            {% endfor %}
+            </table>
     </body>
 </html>
