--- a/products/template/items_list.html
+++ b/products/template/items_list.html
@@ -9,10 +9,11 @@
                 <th>Id</th>
                 <th>Item Name</th>
                 <th>Item Price</th>
-                <
-            {% for i in items %}
-
-            {% endfor %}
+                <th>Items Created </th>
+                {% for i in items %}
+                    <td>{{i.id}}</td>
+                    <td>{{i.</td>
+                {% endfor %}
             </table>
     </body>
 </html>
