--- a/products/template/items_list.html
+++ b/products/template/items_list.html
@@ -12,7 +12,9 @@
                 <th>Items Created </th>
                 {% for i in items %}
                     <td>{{i.id}}</td>
-                    <td>{{i.</td>
+                    <td>{{i.item_name}}</td>
+                    <td>{{i.item_price}}</td>
+                    <td>{{i.created_at}}
                 {% endfor %}
             </table>
     </body>
