--- a/home/template/home.html
+++ b/home/template/home.html
@@ -33,5 +33,12 @@
         ">
         Explore our menu and enjoy quality food anytime, anywhere
         .</p>
+        <h3 style="
+        font-size:34px;
+        margin:10px;
+        color:yellow;
+        ">
+            Restaurent Phone Number-{{restaurent_phone}}
+        </h3>
     </section>
 {% endblock %}
