--- a/home/template/home.html
+++ b/home/template/home.html
@@ -16,7 +16,7 @@
             margin-bottom: 15px;
             color: #e65100;
         ">
-        Welcome to {{restaurent_name}}!
+        Welcome to {{restaurent_name}}! And also enjoy in this {{restaurent_name}}
         </h2>
 
         <p style="
