--- a/home/template/index.html
+++ b/home/template/index.html
@@ -96,7 +96,7 @@
             <nav>
                 <a href="{% url 'home' %}">Home</a>
                 <a href="">About</a>
-                <a href="">Contact</a>
+                <a href="{% url 'contact' %}">Contact</a>
                 <a href="">Login</a>
                 <a href="">Register</a>
             </nav>
